--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site
-repository: sproogen/resume-theme
+repository: kiranprasad2001/resume
 favicon: images/favicon.ico
 
 # Content configuration version
