--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ version: 2
 name: Kiran Prasad
 title: DevOps and CCM Consultant
 email: kiranprasad2001@gmail.com
-website: https://kiranprasad2001.github.io/resume/
+website: https://kiranprasad2001.github.io/resume
 
 # Dark Mode (true/false/never)
 darkmode: false
@@ -46,7 +46,7 @@ linkedin_username: kiranprasad2001
 
 # About Section
 # about_title: About Me
-about_profile_image: /resume/images/profile.jpg
+about_profile_image: /resume/images/4.jpg
 about_content: | # this will include new lines to allow paragraphs
   Hi, my name's Kiran and I'm a Documaker and DevOps consultant. As well as administrating systems I also have experience making small web apps. I have worked at a number of companies gaining teamwork and leadership skills.
 
