--- a/_config.yml
+++ b/_config.yml
@@ -17,17 +17,18 @@ darkmode: false
 # Social links
 twitter_username: kiranprasad2001
 github_username:  kiranprasad2001
-# stackoverflow_username: "00000001"
-# dribbble_username: jekyll
-# facebook_username: jekyll
-# flickr_username: jekyll
+# stackoverflow_username: "kiranprasad2001"
+# dribbble_username: kiranprasad2001
+# facebook_username: kiranprasad2001
+# flickr_username: kiranprasad2001
 instagram_username: kiranprasad2001
 linkedin_username: kiranprasad2001
-# xing_username: jekyll
-# pinterest_username: jekyll
-#youtube_username: globalmtb
-# googleplus_username: +jekyll
-# orcid_username: 0000-0000-0000-0000
+# xing_username: kiranprasad2001
+# pinterest_username: kiranprasad2001
+#youtube_username: kiranprasad2001
+# googleplus_username: +kiranprasad2001
+# orcid_username: kiranprasad2001
+#testing
 
 # Additional icon links
 #additional_links:
@@ -48,7 +49,7 @@ linkedin_username: kiranprasad2001
 # about_title: About Me
 about_profile_image: /resume/images/4.jpg
 about_content: | # this will include new lines to allow paragraphs
-  Hi, my name's Kiran and I'm a Documaker and DevOps consultant. As well as administrating systems I also have experience making small web apps. I have worked at a number of companies gaining teamwork and leadership skills.
+  Hi, my name's Kiran. I'm a Documaker and DevOps consultant. As well as administrating systems I also have experience making small web apps. I have worked at a number of companies gaining teamwork and leadership skills.
 
   I am most skilled in: <mark>AWS</mark>,<mark>Kubernites</mark>,<mark>Jenkins</mark> and <mark>Eating Biryani</mark>
 
