--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
 repository: kiranprasad2001/resume
-favicon: /resume/images/favicon.ico
+favicon: images/favicon.ico
 
 # Content configuration version
 version: 2
@@ -59,15 +59,12 @@ content:
     content:
       - layout: top-middle
         title: Super awesome project
-        #link: https://kiranprasad2001.github.io/resume/
+        #link: https://kiranprasad2001.github.io/resume
         # link_text: Project Website
         additional_links:
           - title:  Resume
             icon: fab fa-github
-            url: https://kiranprasad2001.github.io/resume/
-          # - title:  Github page for project (eg. sproogen/modern-resume-theme)
-          #   icon: fab fa-github
-          #   url: Link to project (eg. sproogen.github.io/modern-resume-theme)
+            url: https://kiranprasad2001.github.io/resume
         quote: >
           Nothing much - under construction
         description: | # this will include new lines to allow paragraphs
@@ -115,7 +112,7 @@ footer_show_references: true
 # references_title: References on request (Override references text)
 
 # Build settings
-remote_theme: sproogen/resume-theme
+remote_theme: kiranprasad2001/resume-theme
 
 sass:
   sass_dir: _sass
