--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,7 @@ linkedin_username: kiranprasad2001
 
 # About Section
 # about_title: About Me
-about_profile_image: images/logo.png
+about_profile_image: images/mylogo.png
 about_content: | # this will include new lines to allow paragraphs
   Hi, my name's Kiran. I'm a Documaker and DevOps consultant. As well as administrating systems I also have experience making small web apps. I have worked at a number of companies gaining teamwork and leadership skills.
 
