--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ content:
     layout: list # Type of content section (list/text)
     content:
       - layout: top-middle
-        title: Super awesome project
+        title: Super awesome projects
         #link: https://kiranprasad2001.github.io/resume
         # link_text: Project Website
         additional_links:
