--- a/_config.yml
+++ b/_config.yml
@@ -57,16 +57,16 @@ content:
     layout: text
     content: |
       Skill set include:
-      - Operating System     -> Linux, Windows
-      - Version Controls     -> SVN, GIT
-      - Build Tools          -> Ant, Maven
-      - CI Tools             -> Jenkins
-      - Scripting            -> Shell Script
-      - Application Servers  -> Tomcat, Web logic
-      - Ticketing Tool       -> JIRA
-      - DevOps tools         -> Puppet
-      - Ticketing tools      -> Jira
-      - Incident tools       -> BMC remedy
+      - Operating System     : <mark>Linux, Windows</mark>
+      - Version Controls     : <mark>SVN, GIT</mark>
+      - Build Tools          : <mark>Ant, Maven</mark>
+      - CI Tools             : <mark>Jenkins</mark>
+      - Scripting            : <mark>Shell Script</mark>
+      - Application Servers  : <mark>Tomcat, Web logic</mark>
+      - Ticketing Tool       : <mark>JIRA</mark>
+      - DevOps tools         : <mark>Puppet</mark>
+      - Ticketing tools      : <mark>Jira</mark>
+      - Incident tools       : <mark>BMC remedy</mark>
   - title: Projects # Title for the section
     layout: list # Type of content section (list/text)
     content:
