--- a/_config.yml
+++ b/_config.yml
@@ -119,7 +119,7 @@ content:
       - Trekking
       - Backpacking
       - [Becoming a ninja](https://www.youtube.com/watch?v=vtg4o__aRMg)
-      Look at this cool image  
+      - Look at this cool image  
       ![Lake](images/lake-kiran.jpg "Lake")
 # Footer
 footer_show_references: true
