--- a/_config.yml
+++ b/_config.yml
@@ -122,7 +122,7 @@ content:
       - Look at this cool image  
       ![Lake](images/lake-kiran.jpg "Lake")
 # Footer
-footer_show_references: true
+footer_show_references: false
 # references_title: References on request (Override references text)
 
 # Build settings
