--- a/_config.yml
+++ b/_config.yml
@@ -74,7 +74,7 @@ content:
     layout: list # Type of content section (list/text)
     content:
       - layout: top-middle
-        title: Super awesome project
+        title: My Resume
         #link: https://kiranprasad2001.github.io/resume/
         # link_text: Project Website
         additional_links:
@@ -87,7 +87,7 @@ content:
         quote: >
           Nothing much - under construction
         description: | # this will include new lines to allow paragraphs
-          I started this project as a way if learning <mark>webapps</mark> and in progress of completing it
+          I started this project as a way if learning <mark>webapps</mark> and in process of completing it
   - title: Experience # Title for the section
     layout: list # Type of content section (list/text)
     content:
