--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ version: 2
 name: Kiran Prasad
 title: DevOps and CCM Consultant
 email: kiranprasad2001@gmail.com
-website: https://kiranprasad2001.github.io/resume
+website: https://spotrot.com/resume
 
 # Dark Mode (true/false/never)
 darkmode: false
